--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run tests
-      run: go test -v ./...
+      run: go test -v ./... -coverprofile=coverage.txt -covermode=atomic
+
+    - name: Upload Code Coverage
+      uses: codecov/codecov-action@v1
+
+    - name: Run golangci-lint
+      uses: golangci/golangci-lint-action@v2.5.2
