fix package name

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,7 +12,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}/spotify-auth-proxy
+  IMAGE_NAME: ${{ github.repository_owner }}/spotify-auth-proxy
 
 jobs:
   docker:
